<resources>
    <string name="app_name">FinalTerm</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="new_email">Enter Your Email</string>
    <string name="new_password">Create a Password</string>
    <string name="user_name">Enter a Username</string>
    <string name="sign_up">SIGN UP</string>
    <string name="change_password">Change Password</string>
</resources>